--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <header>
-    <img src="https://i.imgur.com/hG7a8Oa.png" alt="Logo Moviban"> <!-- cambia este link por tu logo -->
+    <img src="url('Boda_chapultepec.jpeg')"> <!-- cambia este link por tu logo -->
     <h1>Moviban</h1>
     <p>Viajes compartidos, más baratos y seguros 🚐</p>
   </header>
