--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <section>
     <h2>Beneficios</h2>
-    <p>🚐 Transporte compartido en van</p>
+    <p> Transporte compartido en van</p>
     <p>💸 Ahorro en tus viajes</p>
     <p>🤝 Viaja acompañado y seguro</p>
   </section>
