--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <header>
-    <img src="url('Boda_chapultepec.jpeg')"> <!-- cambia este link por tu logo -->
+    <img src= "Moviban_logo.jpg"> <!-- cambia este link por tu logo -->
     <h1>Moviban</h1>
     <p>Viajes compartidos, más baratos y seguros 🚐</p>
   </header>
@@ -63,7 +63,7 @@
 
   <section>
     <h2>Beneficios</h2>
-    <p> Transporte compartido en van</p>
+    <p>🚐Transporte compartido en van</p>
     <p>💸 Ahorro en tus viajes</p>
     <p>🤝 Viaja acompañado y seguro</p>
   </section>
