--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
   <section class="hero">
     <h2>Viaja acompañado, ahorra y llega más rápido</h2>
-    <img src="https://i.imgur.com/U2uG1Om.jpg" alt="Personas viajando en van"> <!-- imagen de ejemplo -->
+    <img src="Movibanjpg" alt="Personas viajando en van"> <!-- imagen de ejemplo -->
     <p>Este 28 de septiembre llega a las fondas o a la casa de tus amigos con Moviban, sin preocupaciones de tacos ni micros llenas.</p>
-    <a href="https://wa.me/56912345678" class="cta">Reserva tu viaje por WhatsApp</a>
+    <a href="https://wa.me/56968701629" class="cta">Reserva tu viaje por WhatsApp</a>
   </section>
 
   <section>
