--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
   <section class="hero">
     <h2>Viaja acompañado, ahorra y llega más 🚀 Únete a la comunidad</h2>
 <h2>Ya sea para llegar al trabajo sin estrés, asistir a ese matrimonio que se extiende hasta la madrugada, o explorar nuevas regiones con total libertad...</h2>
-    <h2>estamos contigo en cada trayecto. Muévete con confianza. Muévete con nosotros.rápido</h2>
+    <h2>Estamos contigo en cada trayecto. Muévete con confianza. Muévete con nosotros.rápido</h2>
     <img src="Moviban1.jpg" alt="Unete a la comunidad, para llegar al trabajo, ese matrimonio que es hasta tarde o para viajar entre regiones"> <!-- imagen de ejemplo -->
     <p>Este 18 de septiembre llega a las fondas o a la casa de tus amigos con Moviban, sin preocupaciones de tacos ni micros llenas.</p>
+        <p>Consulta por los precios especiales dieciocheros 🌶️ .</p>
     <a href="https://wa.me/56968701629" class="cta">Reserva tu viaje por WhatsApp</a>
   </section>
 
